--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Dmitry Redkin <tanatonaut@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@todesstille/mock": ">1.0.0",
+    "@todesstille/mock": "=1.1.8",
     "hardhat": "^2.12.4"
   },
   "devDependencies": {
